--- a/movie-app2/package.json
+++ b/movie-app2/package.json
@@ -12,13 +12,16 @@
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
-    "axios": "^0.27.2",
+    "@rneui/base": "^4.0.0-rc.6",
+    "@rneui/themed": "^4.0.0-rc.6",
+    "axios": "^1.1.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
-    "native-base": "^3.4.17",
+    "native-base": "^3.4.18",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-dropdown-select-list": "^1.0.23",
     "react-native-pager-view": "5.4.15",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
